css/styles.css
body{

    margin: 0px;
    touch-action: manipulation;
    background-color: #282828;
    color: green;
    overflow: hidden;
    position: fixed;
    width: 100%;
    /* ios corrections */
    -webkit-user-select: none;
    -webkit-tap-highlight-color: transparent;
    -webkit-touch-callout: none;
    -webkit-touch-callout: none; /* iOS Safari */
    -webkit-user-select: none; /* Safari */
    -khtml-user-select: none; /* Konqueror HTML */
    -moz-user-select: none; /* Old versions of Firefox */
    -ms-user-select: none; /* Internet Explorer/Edge */
    user-select: none; /* Non-prefixed version, currently supported by Chrome, Edge, Opera and Firefox */
                                  
}
#Stage {
    display: block;
    margin: 0 auto;
}
.outer-content {
  display: table;
  position: inherit;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
}
.middle-content {
  display: table-cell;
  vertical-align: middle;
}
.inner-content {
  margin-left: auto;
  margin-right: auto;
  width: 100%;
}
.highscore {
  position: fixed;
  top: 0;
  text-align: center;
  width: 100%;
  height: 100%;
  background-color: black;
  padding-bottom: 10%;
  display: none;
}
input {
  display: inline-flex;
  margin: 3%;
  border-radius: 3px;
  background-color: green;
  color: #fff;
  border: none;
  font-size: 1.2em;
  padding: 0.3em;
}

